<resources>
    <string name="app_name">Leanote</string>

    <string name="input_email">请输入邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="sign_in">注册</string>
    <string name="login_no_account">还没有账户？</string>
    <string name="sign_in_had_account">已有账户？</string>

    <string name="input_email_null">邮箱不能为空</string>
    <string name="input_password_null">密码不能为空</string>
    <string name="input_email_error">邮箱格式错误</string>
    <string name="input_pwd_inconsistent">密码不一致</string>

    <string name="nav_home_header_name">Name</string>
    <string name="nav_home_header_email">email@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_menu_logout">注销</string>

    <string name="create_time">创建时间: </string>
    <string name="update_time">更新时间: </string>

    <string name="notebook_transition_name">notebook_transition_name</string>

</resources>
