<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_light_blue_500">

    <RelativeLayout
        android:id="@+id/rl_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_login_leanote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:src="@mipmap/ic_login_leanote"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_below="@+id/iv_login_leanote"
            android:layout_marginTop="48dp">

            <com.bruce.leanote.ui.widgets.MAppCompatAutoCompleteTextView
                android:id="@+id/acet_login_email_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_pwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/til_login_email_layout">

            <com.bruce.leanote.ui.widgets.PasswordEditText
                android:id="@+id/pet_login_pwd_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acb_login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_ripple_effect"
            android:layout_below="@+id/til_login_pwd_layout"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:text="@string/login"/>

        <LinearLayout
            android:id="@+id/ll_login_crate_account_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/acb_login_login_btn"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/login_no_account"/>

            <TextView
                android:id="@+id/tv_login_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/md_white_1000"
                android:textSize="14sp"
                android:text="@string/sign_in"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
